--- a/BeluqaTahir/BeluqaTahir.WebUI/Views/Blog/Details.cshtml
+++ b/BeluqaTahir/BeluqaTahir.WebUI/Views/Blog/Details.cshtml
@@ -19,7 +19,7 @@
     }
 }
 
-<div class="site-navbar-wrap">
+<div  class="site-navbar-wrap">
     <div class="site-navbar-top">
         <div class="container py-3">
             <div class="row align-items-center">
@@ -180,10 +180,9 @@
                                     <h4>
                                         <a href="#">
 
-                                            @if (User.Identity.IsAuthenticated)
-                                            {
-                                                @User.Identity.Name.ToUpper()
-                                            }
+                                           
+                                                @item.CreateByUser.UserName
+                                           
                                            
 
 
