--- a/BeluqaTahir/BeluqaTahir.WebUI/Areas/Admin/Views/Account/Singin.cshtml
+++ b/BeluqaTahir/BeluqaTahir.WebUI/Areas/Admin/Views/Account/Singin.cshtml
@@ -32,7 +32,15 @@
                 <div class="col-md-6 col-lg-4">
                     <div style="margin-top:50px" class="login-wrap p-0">
                         <h3 class="mb-4 text-center">Have an account?</h3>
-                        <form  method="post"  class="signin-form">
+                        <form method="post" class="signin-form">
+                            @if (!string.IsNullOrWhiteSpace(ViewBag.ms))
+                            {
+                                <div class="form-group mb-3">
+                                    <div class="alert alert-danger text-primary">
+                                        @ViewBag.ms
+                                    </div>
+                                </div>
+                            }
                             <div class="form-group">
                                 <input asp-for="UserName" class="form-control" placeholder="Username" required>
                             </div>
@@ -43,7 +51,7 @@
                             <div class="form-group">
                                 <button type="submit" class="form-control btn btn-primary submit px-3">Sign In</button>
                             </div>
-                           
+
                         </form>
                     </div>
                 </div>
