--- a/BeluqaTahir/BeluqaTahir.WebUI/Views/Home/Signin.cshtml
+++ b/BeluqaTahir/BeluqaTahir.WebUI/Views/Home/Signin.cshtml
@@ -50,7 +50,7 @@
             <div class="row align-items-center">
                 <div class="col-2">
                     <h1 class="my-0 site-logo">
-                        <a class="LIQUOR" href="index.html">LIQUOR STORE</a>
+                        <a class="LIQUOR" asp-controller="home" asp-action="Index">LIQUOR STORE</a>
                     </h1>
                 </div>
                 <div class="col-10">
@@ -77,9 +77,9 @@
                                 </li>
 
                                 <li>
-                                    <a href="#contact-section" class="nav-link">
+                                    <a asp-controller="Shop" asp-action="ShoppingCard" class="nav-link">
                                         <span><i class="fas fa-shopping-basket"></i></span>
-                                        <sup>3</sup>
+                                        <sup>@ViewBag.ms</sup>
                                     </a>
                                 </li>
 
